--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>new-nox-application</name>
+	<name>NewNox-Application</name>
 	<comment>Project new-nox-application created by Buildship.</comment>
 	<projects>
 	</projects>
