Revert "Added Implementation of BadWordingAnalyzer"
This reverts commit 88e9731dca893c8ff973208addf1f0d3f5e6f948.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NewNox-Application</name>
+	<name>new-nox-application</name>
 	<comment>Project new-nox-application created by Buildship.</comment>
 	<projects>
 	</projects>
