--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
-apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = 'com.noxag.newnox.application.NewNox'
 
 jar {
 	manifest {
-	    attributes 'Main-Class': 'com.noxag.application.NewNox'
+	    attributes 'Main-Class': 'com.noxag.newnox.application.NewNox'
 	}
 }
 
