--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -1,3 +1,2 @@
-connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
+#Thu Oct 05 09:24:03 CEST 2017
 connection.project.dir=
-eclipse.preferences.version=1
