--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
-apply plugin: 'application'
-
-mainClassName = 'com.noxag.newnox.application.NewNox'
+apply plugin: 'java'
 
 jar {
 	manifest {
-	    attributes 'Main-Class': 'com.noxag.newnox.application.NewNox'
+	    attributes 'Main-Class': 'com.noxag.application.NewNox'
 	}
 }
 
